app/assets/stylesheets/users.scss
#writers-body {
	background-image: url(bg.jpg);
}

.writers-img {
	width: 200px;
	height: 200px;
} 


#writers-storyAuthor {
	font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
	font-weight: bold;
	font-size: 15px;
	padding-top: 20px;
	color: #513B56;
}

/*PROFILE PAGE*/
#profile-body {
	background-image: url(bg.jpg);
	/*background-size: cover;*/
}

.profile-navbar {
	width: 350px;
	margin-left: 500px;
	margin-top: 20px;
	padding-left: 20px;
	padding-top: 20px;
	padding-bottom: 10px;
	border-left-width: 0px;
	border-right-width: 0px;
	color: white;
	background-color: white !important
}

#profile-content {
	margin-left: 500px;
}

/*EXPERIMENT*/
#profile-container {
    width: 80%;
    /*background-color: #ffcc33;*/
    margin: 18px auto;
}
#first {
    width: 400px;
    float: left;
    height: 500px;
    background-color: blue;
}
#second {
    width: 200px;
    float: left;
    height: 300px;
    background-color: green;
}
#clear {
    clear: both;
}

